--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "1",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "start": "node dist/app.js",
     "build": "tsc"
